--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ h1,
 h3 {
   color: #606d5f;
 }
+h3 {
+  font-weight: 750;
+  font-size: 2.2rem;
+  text-transform: capitalize;
+}
 p,
 li,
 a,
@@ -116,4 +121,48 @@ header nav .menu a li:hover {
 }
 .hero-section .hero-img img {
   width: 70%;
+}
+/* ----products section styles---- */
+.products-section {
+  padding: 0 20rem;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 20rem;
+}
+.products-section h1 {
+  font-size: 5rem;
+  line-height: 5rem;
+  margin-bottom: 4rem;
+  text-align: center;
+  text-transform: capitalize;
+}
+.products-section .products {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  justify-content: center;
+}
+.products-section .products-card {
+  width: 25rem;
+  height: 25rem;
+  background-color: #efefefef;
+  border-radius: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
+  margin-bottom: 2rem;
+}
+.products-section .products-card img {
+  width: 70%;
+}
+.products-section .products-card .buy-btn {
+  background-color: #ffffff;
+  border: 2px solid #efefefef;
+  padding: 1rem 1rem;
+  border-radius: 1rem;
+  line-height: 1rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
 }
