--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,15 @@ header nav .menu a li:hover {
   font-size: 1.5rem;
   margin-top: 1rem;
 }
+
+/*------ footer section styles------- */
+
+footer {
+  margin-top: 2rem;
+  font-size: 1rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #efefefef;
+}
